# EZFrameDecoder

./: LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.vue  MainContent.vue  main.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: spec_full.ezspec  spec_full.json
src-tauri/src/: decoder.rs  main.rs
src/assets/: scrollbar.css
src/components/: AboutPane.vue  AddCommandBuilder.vue  CommandList.vue  CommandViewer.vue  DecodedPane.vue  DecodedView.vue  DecoderInput.vue  EditCommandBuilder.vue  FamilyEditor.vue  FieldEditor.vue  FieldTable.vue  FrameList.vue  ReloadSpec.vue  SwitchEditor.vue
src/composables/: useBreakpoint.ts  useDecode.ts  useSharedDecode.ts
src/pages/: AboutPage.vue  AddCommandPage.vue  DecoderPage.vue  EditCommandPage.vue  SettingsPage.vue  SpecEditorPage.vue  ViewCommandsPage.vue
src/router/: index.ts
src/stores/: frameStore.ts  settingsStore.ts
src/theme/: abrelTheme.ts
