[package]
name = "EZFrameDecoder"
version = "1.0.0"
description = "An application for decoding simple frame formats."
authors = ["Kerpackie"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ezframedecoder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json    = { version = "1", features = ["preserve_order"] }
thiserror = "2.0.12"
once_cell = "1.21.3"
dirs-next = "2"
tauri-plugin-dialog = "2"

